--- a/domClass2.html
+++ b/domClass2.html
@@ -31,7 +31,16 @@
     </ul>
    </div>
   </div>
+  <script>
+    const tem = document.getElementById('main-header');
+    console.log(tem.nodeType)
+    tem.style.borderBottom ='solid 3px #000'
+
+    const temp2 =document.querySelector(".title");
+   // console.log(temp2.content)
+    temp2.style.fontweight ='bold';
+    temp2.style.color ='green';
+  </script>
 
 </body>
 </html>
-//https://github.com/BiplabFullStack/sharpenerProject1.git
